--- a/package.json
+++ b/package.json
@@ -9,12 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.3.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/lab": "^5.0.0-alpha.92",
+    "@mui/material": "^5.9.2",
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.7.0",
+    "axios": "^0.27.2",
+    "chai": "^4.3.6",
+    "dotenv": "^16.0.1",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.9",
+    "graphql-request": "^6.0.0",
+    "hardhat": "^2.10.0",
+    "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hooks-global-state": "^2.0.0-rc.0",
+    "react-responsive-carousel": "^3.2.23",
+    "reactjs-popup": "^2.0.5",
+    "validator": "^13.7.0",
+    "web3": "^1.7.4",
+    "web3modal": "^1.9.8"
   },
   "devDependencies": {
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0"
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.2",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
   }
 }
