--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.9.3",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/lab": "^5.0.0-alpha.92",
     "@mui/material": "^5.9.2",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
@@ -23,11 +24,15 @@
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
+    "file-saver": "^2.0.5",
     "graphql-request": "^6.0.0",
     "hardhat": "^2.10.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-hooks-global-state": "^2.0.0-rc.0",
     "react-responsive-carousel": "^3.2.23",
     "reactjs-popup": "^2.0.5",
