--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
     "file-saver": "^2.0.5",
+    "firebase": "^9.22.1",
     "graphql-request": "^6.0.0",
     "hardhat": "^2.10.0",
     "jwt-decode": "^3.1.2",
