--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "ethers": "^5.6.9",
     "file-saver": "^2.0.5",
     "firebase": "^9.22.1",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.7",
     "graphql-request": "^6.0.0",
     "hardhat": "^2.10.0",
     "jwt-decode": "^3.1.2",
