--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@ericblade/quagga2": "^1.8.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fullcalendar/daygrid": "^6.1.8",
@@ -37,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hooks-global-state": "^2.0.0-rc.0",
+    "react-jsbarcode": "^0.4.2",
     "react-responsive-carousel": "^3.2.23",
     "reactjs-popup": "^2.0.5",
     "tailwind-datepicker-react": "^1.4.0",
