--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@openzeppelin/contracts": "^4.7.0",
     "axios": "^0.27.2",
     "chai": "^4.3.6",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
@@ -35,6 +37,7 @@
     "jwt-decode": "^3.1.2",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hooks-global-state": "^2.0.0-rc.0",
