--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^4.3.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "dotenv": "^16.0.1",
+    "eth-crypto": "^2.6.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
     "file-saver": "^2.0.5",
